--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,37 +19,8 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column p-3 bg-light sidebar " style="width: 280px; height: 100%;">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 link-dark text-decoration-none justify-content-md-center">
-            <span class="fs-2 fw-bold ">Menú</span>
-        </a>
-        <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item btn btn-light mb-2" >
-            <a href="{{ url_for('productor') }}" class="nav-link link-dark" aria-current="page">
-                Datos del productor
-            </a>
-            </li>
-            <li class="nav-item btn btn-light mb-2" id="adminTab">
-            <a href="{{ url_for('admin') }}" class="nav-link link-dark" aria-current="page">
-                Perfiles de Usuarios
-            </a>
-            </li>
-            <li class="nav-item btn btn-light mb-2">
-            <a href="#" class="nav-link link-dark">
-                Tipos de Productor
-            </a>
-            </li>
-            <li class="nav-item btn btn-light mb-2">
-            <a href="#" class="nav-link link-dark">
-                Logger de Eventos
-            </a>
-            </li>
-        </ul>
-        <hr>
-    </div>
-    <main class="form-signin w-100 m-auto text-center">
-    {% block body %}
+    
+    {% block menu %}
     {% endblock %}
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
